--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -52,7 +52,7 @@
               <p>{{ _translation('Gender', langCode) }}:</p>
             </div>
             <div class="col-md-3 col-sm-8 text-center">
-              <p>{{ user.gender }}</p>
+              <p>{{ _translation(user.gender, langCode) }}</p>
             </div>
             <div class="col-md-6">
             </div>
