--- a/src/app/restart-password/restart-password.component.html
+++ b/src/app/restart-password/restart-password.component.html
@@ -1,6 +1,6 @@
 <div class="restartPassword p-3">
   <form (submit)="restartPassword(email)" *ngIf="!restart && !restart_code">
-    <p class="error_message" *ngIf="error_message">{{error_message}}</p>
+    <!--p class="error_message" *ngIf="error_message">{{error_message}}</p-->
     <div>
       <mat-form-field class="w-100">
         <mat-label>{{ _translation('Enter your email', langCode) }}</mat-label>
@@ -15,7 +15,7 @@
 
   <form (submit)="restartPasswordCode(code, email)" *ngIf="restart && !restart_code">
     <div>
-      <p class="error_message" *ngIf="error_message">{{error_message}}</p>
+      <!--p class="error_message" *ngIf="error_message">{{error_message}}</p-->
       <mat-form-field class="w-100">
         <mat-label>{{ _translation('Enter activation code', langCode) }}</mat-label>
         <input type="text" matInput required name="code" [(ngModel)]="code">
@@ -34,7 +34,7 @@
   </form>
 
   <form (submit)="saveNewPassword(newPassword, confirmPassword, email)" *ngIf="restart && restart_code">
-    <p class="error_message" *ngIf="error_message">{{error_message}}</p>
+    <!--p class="error_message" *ngIf="error_message">{{error_message}}</p-->
     <div>
       <mat-form-field class="w-100">
         <mat-label>{{ _translation('Enter new password', langCode) }}</mat-label>
