--- a/src/app/bills/bills.component.html
+++ b/src/app/bills/bills.component.html
@@ -2,9 +2,9 @@
   <div class="row">
     <!--h1>Costs</h1-->
     <div class="col-md-2 col-sm-12 p-1">
-      <h1 class="m-auto" *ngIf="buttonSwitchMessage != 'Switch to costs!'"><i class="material-icons">money_off</i> Costs
+      <h1 class="m-auto" *ngIf="buttonSwitchMessage != 'Switch to costs!'"><i class="material-icons">money_off</i> {{ _translation('Costs', langCode) }}
       </h1>
-      <h1 class="m-auto" *ngIf="buttonSwitchMessage === 'Switch to costs!'"><i class="material-icons">attach_money</i>Profits
+      <h1 class="m-auto" *ngIf="buttonSwitchMessage === 'Switch to costs!'"><i class="material-icons">attach_money</i> {{ _translation('Profits', langCode) }}
       </h1>
     </div>
     <div class="col-md-2 col-sm-12 actionButton">
@@ -66,16 +66,16 @@
 
 
   <div class="filters p-1">
-    <h3>Filter by</h3>
+    <h3>{{ _translation('Filter by', langCode) }}</h3>
   </div>
   <div class="filters p-1">
     <div class="row">
       <div class="col-md-4 col-sm-12">
         <mat-form-field class="desktopVersion">
-          <mat-label>Category</mat-label>
+          <mat-label>{{ _translation('Category', langCode) }}</mat-label>
           <mat-select (selectionChange)="onChange($event, 'categoryId')">
             <mat-option value=null>
-              <p>None</p>
+              <p></p>
             </mat-option>
             <mat-option *ngFor="let category of categories$" [value]="category.id">
               <p>{{ category.name }}</p>
@@ -85,10 +85,10 @@
       </div>
       <div class="col-md-4 col-sm-12">
         <mat-form-field class="desktopVersion">
-          <mat-label>Sub category</mat-label>
+          <mat-label>{{ _translation('Sub category', langCode) }}</mat-label>
           <mat-select (selectionChange)="onChange($event, 'subCategoryId')">
             <mat-option value="null">
-              <p>None</p>
+              <p></p>
             </mat-option>
             <mat-option *ngFor="let sub_category of subCategories$" [value]="sub_category.id">
               <p>{{ sub_category.name }}</p>
@@ -98,10 +98,10 @@
       </div>
       <div class="col-md-4 col-sm-12">
         <mat-form-field class="w-100">
-          <mat-label>Currency</mat-label>
+          <mat-label>{{ _translation('Currency', langCode) }}</mat-label>
           <mat-select (selectionChange)="onChange($event, 'currencyId')">
             <mat-option value="null">
-              <p>None</p>
+              <p></p>
             </mat-option>
             <mat-option *ngFor="let currency of currencies$" [value]="currency.id">
               <p>{{ currency.code }}</p>
@@ -111,33 +111,33 @@
       </div>
       <div class="col-md-5 col-sm-9">
         <mat-form-field class="w-100">
-          <input matInput [matDatepicker]="pickerFrom" [(ngModel)]="dateFrom" placeholder="Date from" disabled (dateChange)="onChange($event, 'dateFrom')">
+          <input matInput [matDatepicker]="pickerFrom" [(ngModel)]="dateFrom" placeholder="{{ _translation('Date from', langCode) }}" disabled (dateChange)="onChange($event, 'dateFrom')">
           <mat-datepicker-toggle matSuffix [for]="pickerFrom"></mat-datepicker-toggle>
           <mat-datepicker touchUi #pickerFrom disabled="false"></mat-datepicker>
         </mat-form-field>
       </div>
       <div class="col-md-1 col-sm-3">
         <div class="text-right p-1">
-          <button type="button" mat-raised-button color="primary" class="btn-block" (click)="clearDateFrom()">Clear</button>
+          <button type="button" mat-raised-button color="primary" class="btn-block" (click)="clearDateFrom()">{{ _translation('Clear', langCode) }}</button>
         </div>
       </div>
       <div class="col-md-5 col-sm-9">
         <mat-form-field class="w-100">
-          <input matInput [matDatepicker]="pickerTo" [(ngModel)]="dateTo" placeholder="Date to" disabled (dateChange)="onChange($event, 'dateTo')">
+          <input matInput [matDatepicker]="pickerTo" [(ngModel)]="dateTo" placeholder="{{ _translation('Date to', langCode) }}" disabled (dateChange)="onChange($event, 'dateTo')">
           <mat-datepicker-toggle matSuffix [for]="pickerTo"></mat-datepicker-toggle>
           <mat-datepicker touchUi #pickerTo disabled="false"></mat-datepicker>
         </mat-form-field>
       </div>
       <div class="col-md-1 col-sm-3">
         <div class="text-right p-1">
-          <button type="button" mat-raised-button color="primary" class="btn-block" (click)="clearDateTo()">Clear</button>
+          <button type="button" mat-raised-button color="primary" class="btn-block" (click)="clearDateTo()">{{ _translation('Clear', langCode) }}</button>
         </div>
       </div>
       <div class="col-md-12 col-sm-12 search">
           <div>
             <form class="example-form">
               <mat-form-field class="w-100">
-                <input matInput placeholder="Search by title" [formControl]="searchField">
+                <input matInput placeholder="{{ _translation('Search by title', langCode) }}" [formControl]="searchField">
                 <mat-icon matPrefix>search</mat-icon>
               </mat-form-field>
             </form>
@@ -147,69 +147,69 @@
           <div></div>
       </div>
       <div class="col-md-12" *ngIf="bills$.length > 0">
-        <h4>Results</h4>
+        <h4>{{ _translation('Results', langCode) }}</h4>
       </div>
       <div class="col-md-12 mt-2 mat-elevation-z8" *ngIf="bills$.length > 0" style="overflow-x: scroll">
         <table mat-table [dataSource]="bills$" class="col-md-12 col-sm-12">
           <!-- Item Column -->
           <ng-container matColumnDef="title">
-            <th mat-header-cell *matHeaderCellDef class="firstTableRow"> Title</th>
+            <th mat-header-cell *matHeaderCellDef class="firstTableRow">{{ _translation('Title', langCode) }}</th>
             <td mat-cell *matCellDef="let bill"> {{bill.title}} </td>
             <td mat-footer-cell *matFooterCellDef>Total</td>
           </ng-container>
 
           <!-- Item Column -->
           <ng-container matColumnDef="comment" class="tableMobile">
-            <th mat-header-cell *matHeaderCellDef class="text-center tableMobile"> Comment</th>
+            <th mat-header-cell *matHeaderCellDef class="text-center tableMobile">{{ _translation('Comment', langCode) }}</th>
             <td mat-cell *matCellDef="let bill" class="text-center tableMobile"> {{bill.comment}} </td>
             <td mat-footer-cell *matFooterCellDef class="text-center tableMobile"></td>
           </ng-container>
 
           <!-- Item Column -->
           <ng-container matColumnDef="bill_category">
-            <th mat-header-cell *matHeaderCellDef class="text-center"> Category</th>
+            <th mat-header-cell *matHeaderCellDef class="text-center">{{ _translation('Category', langCode) }}</th>
             <td mat-cell *matCellDef="let bill" class="text-center"> {{bill?.bill_category?.name}} </td>
             <td mat-footer-cell *matFooterCellDef></td>
           </ng-container>
 
           <!-- Item Column -->
           <ng-container matColumnDef="bill_sub_category" class="tableMobile">
-            <th mat-header-cell *matHeaderCellDef class="text-center tableMobile"> Sub category</th>
+            <th mat-header-cell *matHeaderCellDef class="text-center tableMobile">{{ _translation('Sub category', langCode) }}</th>
             <td mat-cell *matCellDef="let bill" class="text-center tableMobile"> {{bill?.bill_sub_category?.name}} </td>
             <td mat-footer-cell *matFooterCellDef class="text-center tableMobile"></td>
           </ng-container>
 
           <!-- Item Column -->
           <ng-container matColumnDef="bill_price">
-            <th mat-header-cell *matHeaderCellDef class="text-center"> Price </th>
+            <th mat-header-cell *matHeaderCellDef class="text-center">{{ _translation('Price', langCode) }}</th>
             <td mat-cell *matCellDef="let bill" class="text-center"> {{bill?.price}} </td>
             <td mat-footer-cell *matFooterCellDef></td>
           </ng-container>
 
           <!-- Item Column -->
           <ng-container matColumnDef="bill_currency">
-            <th mat-header-cell *matHeaderCellDef class="text-center"> Currency </th>
+            <th mat-header-cell *matHeaderCellDef class="text-center">{{ _translation('Curr.', langCode) }}</th>
             <td mat-cell *matCellDef="let bill" class="text-center"> {{bill?.currency?.code}} </td>
             <td mat-footer-cell *matFooterCellDef></td>
           </ng-container>
 
           <!-- Item Column -->
-          <ng-container matColumnDef="image" class="tableMobile">
-            <th mat-header-cell *matHeaderCellDef class="text-center tableMobile"> Image</th>
-            <td mat-cell *matCellDef="let bill" class="text-center tableMobile">
-              <mat-checkbox class="example-margin" *ngIf="bill.image" checked="checked"
-                            disabled></mat-checkbox>
-              <mat-checkbox class="example-margin" *ngIf="!bill.image"
-                            disabled></mat-checkbox>
-            </td>
-            <td mat-footer-cell *matFooterCellDef class="text-center tableMobile"></td>
-          </ng-container>
+          <!--<ng-container matColumnDef="image" class="tableMobile">-->
+            <!--<th mat-header-cell *matHeaderCellDef class="text-center tableMobile"> Image</th>-->
+            <!--<td mat-cell *matCellDef="let bill" class="text-center tableMobile">-->
+              <!--<mat-checkbox class="example-margin" *ngIf="bill.image" checked="checked"-->
+                            <!--disabled></mat-checkbox>-->
+              <!--<mat-checkbox class="example-margin" *ngIf="!bill.image"-->
+                            <!--disabled></mat-checkbox>-->
+            <!--</td>-->
+            <!--<td mat-footer-cell *matFooterCellDef class="text-center tableMobile"></td>-->
+          <!--</ng-container>-->
 
           <!-- Show details table row button -->
           <ng-container matColumnDef="showDetails">
-            <th mat-header-cell *matHeaderCellDef class="text-center"> ...</th>
+            <th mat-header-cell *matHeaderCellDef class="text-center">...</th>
             <td mat-cell *matCellDef="let bill" class="text-center">
-              <button mat-button matTooltip="Show details" (click)="openDialogShowBill(bill)"><i class="material-icons">open_in_new</i></button>
+              <button mat-button matTooltip="{{ _translation('Show details', langCode) }}" (click)="openDialogShowBill(bill)"><i class="material-icons">open_in_new</i></button>
             </td>
             <td mat-footer-cell *matFooterCellDef></td>
           </ng-container>
@@ -234,97 +234,102 @@
   <div class="newBill row mt-2">
     <div class="col-md-10"></div>
     <div class="col-md-2 col-sm-12 text-right p-1">
-      <button type="button" mat-raised-button color="primary" class="btn-block newBillButton" (click)="openDialogNewBill(true)">New bill</button>
+      <button type="button" mat-raised-button color="primary" class="btn-block newBillButton" (click)="openDialogNewBill(true)">{{ _translation('New bill', langCode) }}</button>
     </div>
   </div>
 </div>
 
-<div class="bills p-2" *ngIf="newBillState">
-  <form (submit)="newBillSubmit(categoryId, subCategoryId, currencyId, title, comment, price)">
-    <div class="row">
-      <div class="col-md-6 col-sm-12">
-        <h1 *ngIf="buttonSwitchMessage != 'Switch to costs!'">Add new costs</h1>
-        <h1 *ngIf="buttonSwitchMessage == 'Switch to costs!'">Add new profits</h1>
-      </div>
-      <div class="col-md-6 text-right backButton col-sm-12">
-        <button class="newBillButton" mat-button (click)="newBill(false)">Back</button>
-      </div>
+<!--<div class="bills p-2" *ngIf="newBillState">-->
+  <!--<form (submit)="newBillSubmit(categoryId, subCategoryId, currencyId, title, comment, price)">-->
+    <!--<div class="row">-->
+      <!--<div class="col-md-6 col-sm-12">-->
+        <!--<h1 *ngIf="buttonSwitchMessage != 'Switch to costs!'">{{ _translation('Add new costs', langCode) }}</h1>-->
+        <!--<h1 *ngIf="buttonSwitchMessage == 'Switch to costs!'">{{ _translation('Add new profits', langCode) }}</h1>-->
+      <!--</div>-->
+      <!--<div class="col-md-6 text-right backButton col-sm-12">-->
+        <!--<button class="newBillButton" mat-button (click)="newBill(false)">Back</button>-->
+      <!--</div>-->
 
-      <div class="col-md-4">
-        <mat-form-field>
-          <mat-label>Category</mat-label>
-          <mat-select>
-            <mat-option (onSelectionChange)="onChange(null, 'categoryId')" value="">
-              <p>None</p>
-            </mat-option>
-            <mat-option *ngFor="let category of categories$" (onSelectionChange)="onChange(category.id, 'categoryId')"
-                        value="category.name">
-              <p>{{ category.name }}</p>
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
-      <div class="col-md-4">
-        <mat-form-field>
-          <mat-label>Sub category</mat-label>
-          <mat-select>
-            <mat-option (onSelectionChange)="onChange(null, 'subCategoryId')" value="">
-              <p>None</p>
-            </mat-option>
-            <mat-option *ngFor="let sub_category of subCategories$"
-                        (onSelectionChange)="onChange(sub_category.id, 'subCategoryId')" value="sub_category.name">
-              <p>{{ sub_category.name }}</p>
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
-      <div class="col-md-4">
-        <mat-form-field>
-          <mat-label>Currency</mat-label>
-          <mat-select>
-            <mat-option (onSelectionChange)="onChange(null, 'currencyId')" value="">
-              <p>None</p>
-            </mat-option>
-            <mat-option *ngFor="let currency of currencies$" (onSelectionChange)="onChange(currency.id, 'currencyId')"
-                        value="currency.name">
-              <p>{{ currency.code }}</p>
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
-      <div class="col-md-12">
-        <mat-form-field class="w-100">
-          <mat-label>Title</mat-label>
-          <input type="email" matInput required name="title" [(ngModel)]="title">
-        </mat-form-field>
-      </div>
-      <div class="col-md-12">
-        <mat-form-field class="w-100">
-          <mat-label>Comment</mat-label>
-          <textarea matInput placeholder="I bought a new car for 10000€..." class="newBillTextarea" name="comment"
-                    [(ngModel)]="comment"></textarea>
-        </mat-form-field>
-      </div>
-      <div class="col-md-10">
-      </div>
-      <div class="col-md-2 text-right billPrice">
-        <mat-form-field>
-          <mat-label>Price</mat-label>
-          <input type="email" matInput required name="price" placeholder="100.00" [(ngModel)]="price">
-        </mat-form-field>
-      </div>
-      <div class="row">
-        <div class="col-md-10">
-        </div>
-        <div class="col-md-2 text-right saveButton col-sm-12">
-          <button type="submit" mat-raised-button color="primary" class="btn-block newBillButton">Save</button>
-        </div>
-      </div>
+      <!--<div class="col-md-4">-->
+        <!--<mat-form-field>-->
+          <!--<mat-label>Category</mat-label>-->
+          <!--<mat-select>-->
+            <!--<mat-option (onSelectionChange)="onChange(null, 'categoryId')" value="">-->
+              <!--<p>None</p>-->
+            <!--</mat-option>-->
+            <!--<mat-option *ngFor="let category of categories$" (onSelectionChange)="onChange(category.id, 'categoryId')"-->
+                        <!--value="category.name">-->
+              <!--<p>{{ category.name }}</p>-->
+            <!--</mat-option>-->
+          <!--</mat-select>-->
+        <!--</mat-form-field>-->
+      <!--</div>-->
+      <!--<div class="col-md-4">-->
+        <!--<mat-form-field>-->
+          <!--<mat-label>Sub category</mat-label>-->
+          <!--<mat-select>-->
+            <!--<mat-option (onSelectionChange)="onChange(null, 'subCategoryId')" value="">-->
+              <!--<p>None</p>-->
+            <!--</mat-option>-->
+            <!--<mat-option *ngFor="let sub_category of subCategories$"-->
+                        <!--(onSelectionChange)="onChange(sub_category.id, 'subCategoryId')" value="sub_category.name">-->
+              <!--<p>{{ sub_category.name }}</p>-->
+            <!--</mat-option>-->
+          <!--</mat-select>-->
+        <!--</mat-form-field>-->
+      <!--</div>-->
+      <!--<div class="col-md-4">-->
+        <!--<mat-form-field>-->
+          <!--<mat-label>Currency</mat-label>-->
+          <!--<mat-select>-->
+            <!--<mat-option (onSelectionChange)="onChange(null, 'currencyId')" value="">-->
+              <!--<p>None</p>-->
+            <!--</mat-option>-->
+            <!--<mat-option *ngFor="let currency of currencies$" (onSelectionChange)="onChange(currency.id, 'currencyId')"-->
+                        <!--value="currency.name">-->
+              <!--<p>{{ currency.code }}</p>-->
+            <!--</mat-option>-->
+          <!--</mat-select>-->
+        <!--</mat-form-field>-->
+      <!--</div>-->
+      <!--<div class="col-md-12">-->
+        <!--<mat-form-field class="w-100">-->
+          <!--<mat-label>Title</mat-label>-->
+          <!--<input type="email" matInput required name="title" [(ngModel)]="title">-->
+        <!--</mat-form-field>-->
+      <!--</div>-->
+      <!--<div class="col-md-12">-->
+        <!--<mat-form-field class="w-100">-->
+          <!--<mat-label>Comment</mat-label>-->
+          <!--<textarea matInput placeholder="I bought a new car for 10000€..." class="newBillTextarea" name="comment"-->
+                    <!--[(ngModel)]="comment"></textarea>-->
+        <!--</mat-form-field>-->
+      <!--</div>-->
+      <!--<div class="col-md-10">-->
+      <!--</div>-->
+      <!--<div class="col-md-2 text-right billPrice">-->
+        <!--<mat-form-field>-->
+          <!--<mat-label>Price</mat-label>-->
+          <!--<input type="email" matInput required name="price" placeholder="100.00" [(ngModel)]="price">-->
+        <!--</mat-form-field>-->
+      <!--</div>-->
+      <!--<div class="row">-->
+        <!--<div class="col-md-10">-->
+        <!--</div>-->
+        <!--<div class="col-md-2 text-right saveButton col-sm-12">-->
+          <!--<button type="submit" mat-raised-button color="primary" class="btn-block newBillButton">Save</button>-->
+        <!--</div>-->
+      <!--</div>-->
 
 
-    </div>
-  </form>
-</div>
+    <!--</div>-->
+  <!--</form>-->
+<!--</div>-->
+
+
+
+
+
 
 <!--div class="bills p-2" *ngIf="newBillState">
   <form (submit)="newBillSubmit(category_id, sub_category_id, currency_id, title, comment, price)">
