--- a/src/app/bills/show-bill.component.html
+++ b/src/app/bills/show-bill.component.html
@@ -10,14 +10,14 @@
 
 
   <div *ngIf="data.BillType == 'costs'">
-    <p>Cost</p>
+    <p>{{ _translation('Cost', langCode) }}</p>
   </div>
   <div *ngIf="data.BillType == 'profits'">
-    <p>Profit</p>
+    <p>{{ _translation('Profit', langCode) }}</p>
   </div>
 
   <mat-form-field class="w-100">
-    <mat-label>Created</mat-label>
+    <mat-label>{{ _translation('Created', langCode) }}</mat-label>
     <input matInput [matDatepicker]="picker" [(ngModel)]="data.billDate" placeholder="Created date" required disabled>
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <!--mat-datepicker #picker></--mat-datepicker-->
@@ -25,10 +25,10 @@
   </mat-form-field>
 
   <mat-form-field class="w-100">
-    <mat-label>Category</mat-label>
+    <mat-label>{{ _translation('Category', langCode) }}</mat-label>
     <mat-select [(ngModel)]="data.categoryId" required (selectionChange)="onChange($event, 'categoryId')">
       <mat-option value="null">
-        <p>None</p>
+        <p></p>
       </mat-option>
       <mat-option *ngFor="let category of data.categories$" [value]="category.id"
                   value="category.name">
@@ -38,10 +38,10 @@
   </mat-form-field>
 
   <mat-form-field class="w-100">
-    <mat-label>Sub category</mat-label>
+    <mat-label>{{ _translation('Sub category', langCode) }}</mat-label>
     <mat-select [(ngModel)]="data.subCategoryId">
       <mat-option value="null">
-        <p>None</p>
+        <p></p>
       </mat-option>
       <mat-option *ngFor="let subCategory of data.subCategories$ | async" [value]="subCategory.id" >
         {{subCategory.name}}
@@ -50,10 +50,10 @@
   </mat-form-field>
 
   <mat-form-field class="w-100">
-    <mat-label>Currency</mat-label>
+    <mat-label>{{ _translation('Currency', langCode) }}</mat-label>
     <mat-select [(ngModel)]="data.currencyId" required>
       <mat-option value="null">
-        <p>None</p>
+        <p></p>
       </mat-option>
       <mat-option *ngFor="let currency of data.currencies$" [value]="currency.id">
         {{currency.code}}
@@ -62,39 +62,39 @@
   </mat-form-field>
 
   <mat-form-field class="w-100">
-    <mat-label>Title</mat-label>
+    <mat-label>{{ _translation('Title', langCode) }}</mat-label>
     <input type="text" matInput required [(ngModel)]="data.billTitle">
   </mat-form-field>
 
   <mat-form-field class="w-100">
-    <mat-label>Comment</mat-label>
-    <textarea matInput placeholder="I bought a new car for 10000€..." class="newBillTextarea" [(ngModel)]="data.billComment"></textarea>
+    <mat-label>{{ _translation('Comment', langCode) }}</mat-label>
+    <textarea matInput placeholder="{{ _translation('I bought a new car for 10000€...', langCode) }}" class="newBillTextarea" [(ngModel)]="data.billComment"></textarea>
   </mat-form-field>
 
   <mat-form-field class="w-100">
-    <mat-label>Price</mat-label>
+    <mat-label>{{ _translation('Price', langCode) }}</mat-label>
     <input type="text" matInput required [(ngModel)]="data.billPrice">
   </mat-form-field>
 
   <mat-form-field class="w-100">
-    <mat-label>Quantity</mat-label>
+    <mat-label>{{ _translation('Quantity', langCode) }}</mat-label>
     <input type="text" matInput required [(ngModel)]="data.billQuantity">
   </mat-form-field>
 
   <div class="w-100 text-left">
-    <mat-checkbox [(ngModel)]="data.billNotMyCity">Not my city</mat-checkbox>
+    <mat-checkbox [(ngModel)]="data.billNotMyCity">{{ _translation('Not my city', langCode) }}</mat-checkbox>
   </div>
 
 </div>
 <div mat-dialog-actions class="w-100">
   <div class="w-50 ml-auto mr-auto mb-auto mt-1 text-center">
-    <button type="button" mat-raised-button class="btn-block w-90" (click)="onNoClick()">No Thanks</button>
+    <button type="button" mat-raised-button class="btn-block w-90" (click)="onNoClick()">{{ _translation('Close', langCode) }}</button>
   </div>
   <div class="w-50 ml-auto mr-auto mb-auto mt-1 text-center">
-    <button type="button" mat-raised-button color="primary" class="btn-block w-90" (click)="editBill(data)">Edit</button>
+    <button type="button" mat-raised-button color="primary" class="btn-block w-90" (click)="editBill(data)">{{ _translation('Edit', langCode) }}</button>
   </div>
   <div class="w-100 ml-auto mr-auto mb-auto mt-1 text-center">
-    <button type="button" mat-raised-button color="warn" class="btn-block deleteBill" (click)="openDialogDeleteBill(data.billId)">Delete</button>
+    <button type="button" mat-raised-button color="warn" class="btn-block deleteBill" (click)="openDialogDeleteBill(data.billId)">{{ _translation('Delete', langCode) }}</button>
   </div>
 </div>
 <div class="text-right">
