--- a/src/app/profile/change_password.html
+++ b/src/app/profile/change_password.html
@@ -2,15 +2,21 @@
   <p>{{ _translation('Change password', langCode) }}</p>
   <mat-form-field>
     <mat-label>{{ _translation('Current password', langCode) }}</mat-label>
-    <input type="password" matInput required name="currentPassword" [(ngModel)]="data.currentPassword">
+    <input [type]="showPassword == true ? 'text': 'password'" matInput required name="currentPassword" [(ngModel)]="data.currentPassword">
+    <mat-icon *ngIf="showPassword === false" matSuffix (click)="toogleShowPassword()">visibility_off</mat-icon>
+    <mat-icon *ngIf="showPassword === true" matSuffix (click)="toogleShowPassword()">visibility</mat-icon>
   </mat-form-field>
   <mat-form-field>
     <mat-label>{{ _translation('New password', langCode) }}</mat-label>
-    <input type="password" matInput required name="newPassword" [(ngModel)]="data.newPassword">
+    <input [type]="showPassword == true ? 'text': 'password'" matInput required name="newPassword" [(ngModel)]="data.newPassword">
+    <mat-icon *ngIf="showPassword === false" matSuffix (click)="toogleShowPassword()">visibility_off</mat-icon>
+    <mat-icon *ngIf="showPassword === true" matSuffix (click)="toogleShowPassword()">visibility</mat-icon>
   </mat-form-field>
   <mat-form-field>
     <mat-label>{{ _translation('Confirm password', langCode) }}</mat-label>
-    <input type="password" matInput required name="confirmPassword" [(ngModel)]="data.confirmPassword">
+    <input [type]="showPassword == true ? 'text': 'password'" matInput required name="confirmPassword" [(ngModel)]="data.confirmPassword">
+    <mat-icon *ngIf="showPassword === false" matSuffix (click)="toogleShowPassword()">visibility_off</mat-icon>
+    <mat-icon *ngIf="showPassword === true" matSuffix (click)="toogleShowPassword()">visibility</mat-icon>
   </mat-form-field>
 </div>
 <div mat-dialog-actions class="w-100">
