--- a/src/app/bills/delete-bill.component.html
+++ b/src/app/bills/delete-bill.component.html
@@ -1,4 +1,5 @@
 <div mat-dialog-content class="text-center">
+  <mat-icon>warning</mat-icon>
   <h5>{{ _translation('Are you sure that you want delete this bill?', langCode) }}</h5>
 </div>
 <div mat-dialog-actions class="w-100">
